k8s/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.yourdomain.com # Substitua pelo seu domínio de testes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-test-service
                port:
                  number: 80
