k8s/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-test-service
spec:
  selector:
    app: laravel-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
